model refator, login, signup

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -8,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>{{ user.username }}</p>
-    <p>{{ user.id }}</p>
+    <p>{{ user }}</p>
+
 </body>
 </html>
