--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,56 @@
 <!doctype html>
 <html lang="en">
+{% extends 'bootstrap/base.html' %}
+{% import "bootstrap/wtf.html" as wtf %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <head>
+    <meta charset="utf-8">
+</head>
     <title>Document</title>
 </head>
 <body>
-<form action="/" method="POST">
-    <input type="text" name="username">
-    <button class="submit">Submit</button>
-</form>
+{% block content %}
+    <form method="POST" action="/">
+      {{ form.csrf_token }}
+
+      <fieldset class="companyName">
+        {{ form.loginName.label }}
+        {{ form.loginName(placeholder='Login name of your company') }}
+        {% if form.loginName.errors %}
+          <ul class="errors">
+            {% for error in form.loginName.errors %}
+              <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      </fieldset>
+      <fieldset class="password">
+          {{ form.password.name }}
+          {{ form.password(placeholder='Password') }}
+          {% if form.password.errors %}
+            <ul class="errors">
+                {% for error in form.password.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+          {% endif %}
+      </fieldset>
+
+
+      <div class="submit-button">
+        {{ form.submit }}
+      </div>
+
+      <div class="login-signup">
+        <span>Don't have an account?</span>
+        <a href="{{ url_for('signup') }}">Create accont.</a>
+      </div>
+
+    </form>
+{% endblock %}
 </body>
 </html>
