--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,18 @@
 </head>
 <body>
     <p>{{ user }}</p>
+    <p><a href="{{ url_for('create_client') }}">Create client</a></p>
+    <p><a href="{{ url_for('edit_client_get_id') }}">Edit client</a></p>
+    <p><a href="{{ url_for('create_client') }}">Delete client</a></p>
+    <p><a href="{{ url_for('create_client') }}">View client</a></p>
+    <p><a href="{{ url_for('create_client') }}">Create invoice</a></p>
+    <p><a href="{{ url_for('create_client') }}">Edit invoice</a></p>
+    <p><a href="{{ url_for('create_client') }}">Delete invoice</a></p>
+    <p><a href="{{ url_for('create_client') }}">View invoice</a></p>
+    <p><a href="{{ url_for('create_client') }}">Create item</a></p>
+    <p><a href="{{ url_for('create_client') }}">Edit item</a></p>
+    <p><a href="{{ url_for('create_client') }}">Delete item</a></p>
+    <p><a href="{{ url_for('create_client') }}">View item</a></p>
 
 </body>
 </html>
