--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,17 @@
 </head>
 <body>
 {% block content %}
+    {% for message in get_flashed_messages() %}
+      <div class="alert alert-warning">
+        <button
+          type="button"
+          class="close"
+          data-dismiss="alert">
+          x
+        </button>
+        {{ message }}
+      </div>
+    {% endfor %}
     <form method="POST" action="/">
       {{ form.csrf_token }}
 
