--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,17 @@
     <title>Document</title>
 </head>
 <body>
+    {% for message in get_flashed_messages() %}
+      <div class="alert alert-warning">
+        <button
+          type="button"
+          class="close"
+          data-dismiss="alert">
+          x
+        </button>
+        {{ message }}
+      </div>
+    {% endfor %}
     {% block content %}
     {% endblock %}
 </body>
