--- a/templates/home.html
+++ b/templates/home.html
@@ -14,8 +14,8 @@
     <p><a href="{{ url_for('edit_client_get_id') }}">Edit client</a></p>
     <p><a href="{{ url_for('create_client') }}">Delete client</a></p>
     <p><a href="{{ url_for('create_client') }}">View client</a></p>
-    <p><a href="{{ url_for('create_client') }}">Create invoice</a></p>
-    <p><a href="{{ url_for('create_client') }}">Edit invoice</a></p>
+    <p><a href="{{ url_for('create_invoice') }}">Create invoice</a></p>
+    <p><a href="{{ url_for('edit_invoice_get_id') }}">Edit invoice</a></p>
     <p><a href="{{ url_for('create_client') }}">Delete invoice</a></p>
     <p><a href="{{ url_for('create_client') }}">View invoice</a></p>
     <p><a href="{{ url_for('create_client') }}">Create item</a></p>
