create update items

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,8 +18,8 @@
     <p><a href="{{ url_for('edit_invoice_get_id') }}">Edit invoice</a></p>
     <p><a href="{{ url_for('create_client') }}">Delete invoice</a></p>
     <p><a href="{{ url_for('create_client') }}">View invoice</a></p>
-    <p><a href="{{ url_for('create_client') }}">Create item</a></p>
-    <p><a href="{{ url_for('create_client') }}">Edit item</a></p>
+    <p><a href="{{ url_for('create_item') }}">Create item</a></p>
+    <p><a href="{{ url_for('edit_item_get_id') }}">Edit item</a></p>
     <p><a href="{{ url_for('create_client') }}">Delete item</a></p>
     <p><a href="{{ url_for('create_client') }}">View item</a></p>
 
