create update invoice_lines

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,9 @@
     <p><a href="{{ url_for('create_client') }}">View client</a></p>
     <p><a href="{{ url_for('create_invoice') }}">Create invoice</a></p>
     <p><a href="{{ url_for('edit_invoice_get_id') }}">Edit invoice</a></p>
+    <p><a href="{{ url_for('create_invoice_line') }}">Add invoice lines</a></p>
+    <p><a href="{{ url_for('edit_invoice_line_get_id') }}">Edit invoice lines</a></p>
+    <p><a href="{{ url_for('create_client') }}">Remove invoice lines</a></p>
     <p><a href="{{ url_for('create_client') }}">Delete invoice</a></p>
     <p><a href="{{ url_for('create_client') }}">View invoice</a></p>
     <p><a href="{{ url_for('create_item') }}">Create item</a></p>
