delete invoices_lines, items, invoices

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,12 +18,12 @@
     <p><a href="{{ url_for('edit_invoice_get_id') }}">Edit invoice</a></p>
     <p><a href="{{ url_for('create_invoice_line') }}">Add invoice lines</a></p>
     <p><a href="{{ url_for('edit_invoice_line_get_id') }}">Edit invoice lines</a></p>
-    <p><a href="{{ url_for('create_client') }}">Remove invoice lines</a></p>
-    <p><a href="{{ url_for('create_client') }}">Delete invoice</a></p>
+    <p><a href="{{ url_for('delete_invoice_line') }}">Remove invoice lines</a></p>
+    <p><a href="{{ url_for('delete_invoice') }}">Delete invoice</a></p>
     <p><a href="{{ url_for('create_client') }}">View invoice</a></p>
     <p><a href="{{ url_for('create_item') }}">Create item</a></p>
     <p><a href="{{ url_for('edit_item_get_id') }}">Edit item</a></p>
-    <p><a href="{{ url_for('create_client') }}">Delete item</a></p>
+    <p><a href="{{ url_for('delete_item') }}">Delete item</a></p>
     <p><a href="{{ url_for('create_client') }}">View item</a></p>
 
 </body>
