delete invoices_lines, items, invoices

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,36 @@
 <!doctype html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/styles/base.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/72642c9bd3.js" crossorigin="anonymous"></script>
+    <title>{% block title%}{% endblock %} - Simplevoice </title>
 </head>
 <body>
+    <div id="header" class="header fixed-top d-flex align-items-center">
+        <div class="d-flex align-items-center justify-content-between">
+            <a href="{{ url_for('home') }}" class="logo d-flex align-items-center">
+                <img src="{{url_for('static', filename='logo.png')}}" alt="logo">
+                <span class="d-none d-lg-block">SimpleVoice</span>
+            </a>
+        </div>
+        <nav class="header-nav">
+            <ul class="d-flex">
+                <li class="nav-item">
+                    <i class="fa-regular fa-user"></i><a href="#"> Logged in as {{user.companyName}}</a>
+                </li>
+                <li class="nav-item">
+                    <i class="fa-solid fa-arrow-right-from-bracket"></i><a href="{{ url_for('logout') }}"> Logout</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     {% for message in get_flashed_messages() %}
       <div class="alert alert-warning">
         <button
@@ -19,7 +42,71 @@
         {{ message }}
       </div>
     {% endfor %}
-    {% block content %}
-    {% endblock %}
+
+    <nav id="sidebar" class="sidebar">
+        <ul class="sidebar-nav" class="sidebar-nav">
+            <li class="nav-heading">View</li>
+                <ul id="view-nav" class="nav-content" data-bs-parent="sidebar-nav">
+                    <li>
+                        <a href="{{ url_for('create_invoice') }}">Invoices</a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('edit_invoice_get_id') }}">Clients</a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('delete_invoice') }}">Items</a>
+                    </li>
+                </ul>
+            <li class="nav-heading">Manage</li>
+            <li class="nav-item">
+                <span class="nav-link">Invoices</span>
+                <ul id="invoices-nav" class="nav-content" data-bs-parent="sidebar-nav">
+                    <li>
+                        <a href="{{ url_for('create_invoice') }}">Create</a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('edit_invoice_get_id') }}">Update</a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('delete_invoice') }}">Delete</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item">
+                <span class="nav-link">Clients</span>
+                <ul id="clients-nav" class="nav-content" data-bs-parent="sidebar-nav">
+                    <li>
+                        <a href="{{ url_for('create_client') }}">Create</a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('edit_client_get_id') }}">Update</a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('delete_client') }}">Delete</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item">
+                <span class="nav-link">Items</span>
+                <ul id="items-nav" class="nav-content" data-bs-parent="sidebar-nav">
+                    <li>
+                        <a href="{{ url_for('create_item') }}">Create</a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('edit_item_get_id') }}">Update</a>
+                    </li>
+                    <li>
+                        <a href="{{ url_for('delete_item') }}">Delete</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    <div class="main">
+        <div class="content">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
 </body>
 </html>
