--- a/templates/create_client.html
+++ b/templates/create_client.html
@@ -1,59 +1,74 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Create Client</h1>
-<form method="POST" action="/create_client">
-    {{ form.csrf_token }}
-    <fieldset class="clientName">
-        {{ form.clientName.label }}
-        {{ form.clientName(placeholder='Client name') }}
+<div class="row">
+    <div class="col-sm-4">
+        <div class="form-group col-sm-10">
+            <h1>Create Client</h1>
+                <div class="form-outline">
+                    <form method="POST" action="/create_client">
+                        {{ form.csrf_token }}
+                        <fieldset class="clientName">
+                            <div class="form-group">
+                                {{ form.clientName.label(class="form-label") }}
+                                {{ form.clientName(class="form-control") }}
+                            </div>
+                            {% if form.clientName.errors %}
+                              <ul class="errors">
+                                {% for error in form.clientName.errors %}
+                                  <li>{{ error }}</li>
+                                {% endfor %}
+                              </ul>
+                            {% endif %}
+                        </fieldset>
+                        <fieldset class="clientEmail">
+                            <div class="form-group">
+                                {{ form.clientEmail.label(class="form-label") }}
+                                {{ form.clientEmail(class="form-control") }}
+                            </div>
+                            {% if form.clientEmail.errors %}
+                              <ul class="errors">
+                                {% for error in form.clientEmail.errors %}
+                                  <li>{{ error }}</li>
+                                {% endfor %}
+                              </ul>
+                            {% endif %}
+                        </fieldset>
+                        <fieldset class="clientPhone">
+                            <div class="form-group">
+                                {{ form.clientPhone.label(class="form-label") }}
+                                {{ form.clientPhone(class="form-control") }}
+                            </div>
+                            {% if form.clientPhone.errors %}
+                              <ul class="errors">
+                                {% for error in form.clientPhone.errors %}
+                                  <li>{{ error }}</li>
+                                {% endfor %}
+                              </ul>
+                            {% endif %}
+                        </fieldset>
+                        <fieldset class="clientReference">
+                            <div class="form-group">
+                                {{ form.clientReference.label(class="form-label") }}
+                                {{ form.clientReference(class="form-control") }}
+                            </div>
+                            {% if form.clientReference.errors %}
+                              <ul class="errors">
+                                {% for error in form.clientReference.errors %}
+                                  <li>{{ error }}</li>
+                                {% endfor %}
+                              </ul>
+                            {% endif %}
+                        </fieldset>
 
-        {% if form.clientName.errors %}
-          <ul class="errors">
-            {% for error in form.clientName.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-    </fieldset>
-    <fieldset class="clientEmail">
-        {{ form.clientEmail.label }}
-        {{ form.clientEmail(placeholder='Client email') }}
+                        <div class="form-group">
+                            {{ form.submit(class="btn btn-primary") }}
+                        </div>
+                    </form>
+                </div> <!-- div form-outlne -->
+        </div> <!-- div form-group -->
+        <div class="right-panel col-sm-4">
 
-        {% if form.clientEmail.errors %}
-          <ul class="errors">
-            {% for error in form.clientEmail.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-    </fieldset>
-    <fieldset class="clientPhone">
-        {{ form.clientPhone.label }}
-        {{ form.clientPhone(placeholder='Client name') }}
-
-        {% if form.clientPhone.errors %}
-          <ul class="errors">
-            {% for error in form.clientPhone.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-    </fieldset>
-    <fieldset class="clientReference">
-        {{ form.clientReference.label }}
-        {{ form.clientReference(placeholder='Client name') }}
-
-        {% if form.clientReference.errors %}
-          <ul class="errors">
-            {% for error in form.clientReference.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-    </fieldset>
-
-    <div class="submit-button">
-        {{ form.submit }}
+        </div>
     </div>
-</form>
+</div>
 {% endblock %}
