--- a/templates/edit_client.html
+++ b/templates/edit_client.html
@@ -1,34 +1,45 @@
 {% extends 'base.html' %}
 {% block content %}
 {% for message in get_flashed_messages() %}
-      <div class="alert alert-warning">
-        <button
-          type="button"
-          class="close"
-          data-dismiss="alert">
-          x
-        </button>
-        {{ message }}
-      </div>
-    {% endfor %}
-<h1>Edit Client</h1>
-<form method="POST" action="/edit_client_get_id">
-    {{ form.csrf_token }}
-    <fieldset class="clientID">
-        {{ form.clientID.label }}
-        {{ form.clientID(placeholder='Client ID') }}
+<div class="alert alert-warning">
+    <button
+      type="button"
+      class="close"
+      data-dismiss="alert">
+      x
+    </button>
+    {{ message }}
+  </div>
+{% endfor %}
+<div class="row">
+    <div class="col-sm-4">
+        <div class="form-group col-sm-10">
+            <h1>Edit Client</h1>
+            <div class="form-outline">
+                <form method="POST" action="/edit_client_get_id">
+                    {{ form.csrf_token }}
+                    <fieldset class="clientID">
+                        <div class="form-group">
+                            {{ form.client_id.label(class="form-label") }}
+                            {{ form.client_id(class="form-control") }}
+                        </div>
+                        {% if form.client_id.errors %}
+                          <ul class="errors">
+                            {% for error in form.client_id.errors %}
+                              <li>{{ error }}</li>
+                            {% endfor %}
+                          </ul>
+                        {% endif %}
+                    </fieldset>
+                        <div class="form-group">
+                            {{ form.submit(class="btn btn-primary") }}
+                        </div>
+                </form>
+            </div> <!-- div form-outline -->
+        </div> <!-- div form-group col-lg-6 -->
+        <div class="right-panel col-lg-4">
 
-        {% if form.clientID.errors %}
-          <ul class="errors">
-            {% for error in form.clientID.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-    </fieldset>
-
-    <div class="submit-button">
-        {{ form.submit }}
+        </div>
     </div>
-</form>
+</div>
 {% endblock %}
