--- a/templates/home.html
+++ b/templates/home.html
@@ -1,30 +1,5 @@
+{% extends 'base.html' %}
+{% block title %} Home {% endblock %}
+{% block content %}
 
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <p>{{ user }}</p>
-    <p><a href="{{ url_for('create_client') }}">Create client</a></p>
-    <p><a href="{{ url_for('edit_client_get_id') }}">Edit client</a></p>
-    <p><a href="{{ url_for('create_client') }}">Delete client</a></p>
-    <p><a href="{{ url_for('create_client') }}">View client</a></p>
-    <p><a href="{{ url_for('create_invoice') }}">Create invoice</a></p>
-    <p><a href="{{ url_for('edit_invoice_get_id') }}">Edit invoice</a></p>
-    <p><a href="{{ url_for('create_invoice_line') }}">Add invoice lines</a></p>
-    <p><a href="{{ url_for('edit_invoice_line_get_id') }}">Edit invoice lines</a></p>
-    <p><a href="{{ url_for('delete_invoice_line') }}">Remove invoice lines</a></p>
-    <p><a href="{{ url_for('delete_invoice') }}">Delete invoice</a></p>
-    <p><a href="{{ url_for('create_client') }}">View invoice</a></p>
-    <p><a href="{{ url_for('create_item') }}">Create item</a></p>
-    <p><a href="{{ url_for('edit_item_get_id') }}">Edit item</a></p>
-    <p><a href="{{ url_for('delete_item') }}">Delete item</a></p>
-    <p><a href="{{ url_for('create_client') }}">View item</a></p>
-
-</body>
-</html>
+{% endblock %}
