--- a/templates/create_item.html
+++ b/templates/create_item.html
@@ -1,36 +1,51 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Create Invoice</h1>
-<form method="POST" action="/create_item">
-    {{ form.csrf_token }}
-    <fieldset class="item_name">
-        {{ form.item_name.label }}
-        {{ form.item_name(placeholder='Item name') }}
 
-        {% if form.item_name.errors %}
-          <ul class="errors">
-            {% for error in form.item_name.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-    </fieldset>
+<div class="row">
+    <div class="col-lg-6">
+        <div class="form-group col-lg-6">
+            <h1>Create Invoice</h1>
+                <div class="form-outline">
+                    <form method="POST" action="/create_item">
+                        {{ form.csrf_token }}
+                        <fieldset class="item_name">
+                            <div class="form-group">
+                                {{ form.item_name.label(class="form-label") }}
+                                {{ form.item_name(class="form-control") }}
+                            </div>
+                            {% if form.item_name.errors %}
+                              <ul class="errors">
+                                {% for error in form.item_name.errors %}
+                                  <li>{{ error }}</li>
+                                {% endfor %}
+                              </ul>
+                            {% endif %}
+                        </fieldset>
 
-    <fieldset class="item_pric">
-        {{ form.item_price.label }}
-        {{ form.item_price(placeholder='Item price') }}
+                        <fieldset class="item_price">
+                            <div class="form-group">
+                                {{ form.item_price.label(class="form-label") }}
+                                {{ form.item_price(class="form-control") }}
+                            </div>
+                            {% if form.item_price.errors %}
+                              <ul class="errors">
+                                {% for error in form.item_price.errors %}
+                                  <li>{{ error }}</li>
+                                {% endfor %}
+                              </ul>
+                            {% endif %}
+                        </fieldset>
 
-        {% if form.item_price.errors %}
-          <ul class="errors">
-            {% for error in form.item_price.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-    </fieldset>
+                        <div class="form-group">
+                            {{ form.submit(class="btn btn-primary") }}
+                        </div>
+                    </form>
+                </div> <!-- div form-outlne -->
+        </div> <!-- div form-group -->
+        <div class="right-panel col-lg-6">
 
-    <div class="submit-button">
-        {{ form.submit }}
+        </div>
     </div>
-</form>
+</div>
+
 {% endblock %}
