--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -1,23 +1,54 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Edit Item</h1>
-<form method="POST" action="/edit_item">
-    {{ form.csrf_token }}
-    <fieldset class="item_id">
-        {{ form.item_id.label }}
-        {{ form.item_id(placeholder='Number of the item to edit') }}
+<div class="row">
+    <div class="col-sm-4">
+        <div class="form-group col-sm-10">
+            <h1>Edit Item</h1>
+                <div class="form-outline">
+                    <form method="POST" action="/edit_item">
+                        {{ form.csrf_token }}
+                        <fieldset class="item_id">
+                            <div class="form-group">
+                                {{ form.item_id.label(class="form-label") }}
+                                {{ form.item_id(class="form-control") }}
+                            </div>
+                            {% if form.item_id.errors %}
+                              <ul class="errors">
+                                {% for error in form.item_id.errors %}
+                                  <li>{{ error }}</li>
+                                {% endfor %}
+                              </ul>
+                            {% endif %}
+                        </fieldset>
 
-        {% if form.item_id.errors %}
-          <ul class="errors">
-            {% for error in form.item_id.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-    </fieldset>
-
-    <div class="submit-button">
-        {{ form.submit }}
+                        <div class="form-group">
+                            {{ form.submit(class="btn btn-primary") }}
+                        </div>
+                    </form>
+                </div> <!-- div form-outlne -->
+        </div> <!-- div form-group -->
     </div>
-</form>
+    <div class="right-panel right-panel-table col-sm-4">
+        <div class="table-view">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Item name</th>
+                        <th>Item ID</th>
+                        <th>Current price</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for item in items %}
+                    <tr>
+                        <td>{{item.item_name}}</td>
+                        <td>{{item.item_id}}</td>
+                        <td>{{item.item_price}}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 {% endblock %}
