--- a/templates/edit_item_information.html
+++ b/templates/edit_item_information.html
@@ -1,37 +1,52 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="row">
+    <div class="col-sm-4">
+        <div class="form-group col-sm-10">
+            <h1>Edit Item {{ item.item_id }} </h1>
+                <div class="form-outline">
+                    <form method="POST" action="/edit_item_information_update/{{item.item_id}}">
+                        {{ form.csrf_token }}
+                        <fieldset class="itemName">
+                            <div class="form-group">
+                                {{ form.item_name.label(class="form-label") }}
+                                {{ form.item_name(class="form-control") }}
+                            </div>
+                            {% if form.item_name.errors %}
+                              <ul class="errors">
+                                {% for error in form.item_name.errors %}
+                                  <li>{{ error }}</li>
+                                {% endfor %}
+                              </ul>
+                            {% endif %}
+                        </fieldset>
+                        <fieldset class="itemPrice">
+                            <div class="form-group">
+                                {{ form.item_price.label(class="form-label") }}
+                                {{ form.item_price(class="form-control") }}
+                            </div>
+                            {% if form.item_price.errors %}
+                              <ul class="errors">
+                                {% for error in form.item_price.errors %}
+                                  <li>{{ error }}</li>
+                                {% endfor %}
+                              </ul>
+                            {% endif %}
+                        </fieldset>
 
-<h1>Edit Item {{ item.item_id }} - {{ item.item_name }} : {{ item.item_price }} </h1>
-<form method="POST" action="/edit_item_information_update/{{item.item_id}}">
-    {{ form.csrf_token }}
-    <fieldset class="itemName">
-        {{ form.item_name.label }}
-        {{ form.item_name(placeholder='Item name') }}
+                        <div class="submit-button">
+                            {{ form.submit(class="btn btn-primary") }}
+                        </div>
+                    </form>
 
-        {% if form.item_name.errors %}
-          <ul class="errors">
-            {% for error in form.item_name.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-    </fieldset>
-
-    <fieldset class="itemPrice">
-        {{ form.item_price.label }}
-        {{ form.item_price(placeholder='Item price') }}
-
-        {% if form.item_price.errors %}
-          <ul class="errors">
-            {% for error in form.item_price.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-    </fieldset>
-
-    <div class="submit-button">
-        {{ form.submit }}
+                </div> <!-- div form-outlne -->
+        </div> <!-- div form-group -->
     </div>
-</form>
+    <div class="right-panel right-panel-edit col-sm-4">
+        <h3>Current item informations</h3>
+        <p>Name: {{ item.item_name }}</p>
+        <p>Item : {{ item.item_price }}</p>
+    </div>
+</div>
+
 {% endblock %}
