--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,25 @@
 {% extends 'base.html' %}
 {% block title %} Home {% endblock %}
 {% block content %}
+    <div class="home-container"></div>
+        <div class="home">
+            <div></div>
+            <h2>How to use Simplevoice</h2>
+            <p>Simplevoice is a CRUD program that gives the user an interface to manipulate a database
+            that is used for maintaining clients, items and invoices.</p>
+            <p>The view section on the sidebar is there to see what is in the database. It is possible
+            to click on the IDs of the clients, invoices or items to view in full that specific entry and the
+            associated things with it</p>
+            <p>The database starts empty. In order to create invoices, clients need to be created first.</p>
+            <p>It is then possible to create invoices by the Invoice - create link on the sidebar.</p>
+            <p>To add items to the invoices, they first need to be added to the database via the
+            Items - create link of the sidebar.</p>
+            <p>To add items to an invoice (an invoice line), click the Add lines link on the sidebar.</p>
+            <p><span class="font-weight-bold">Note:</span> After inserting an Invoice line to an invoice,
+            if you modify the item price or name or delete it will stay on the invoice as is was first created.
+            To edit the invoice lines, click on the edit invoice lines link in the sidebar.</p>
+            <p>After the clients, invoices, invoice lines or items have been added to the database
+            they can be updated to edited with their respective links in the sidebar.</p>
 
+        </div>
 {% endblock %}
