--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/styles/base.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <head>
     <meta charset="utf-8">
 </head>
@@ -14,54 +17,76 @@
 </head>
 <body>
 {% block content %}
-    {% for message in get_flashed_messages() %}
-      <div class="alert alert-warning">
-        <button
-          type="button"
-          class="close"
-          data-dismiss="alert">
-          x
-        </button>
-        {{ message }}
+
+<section>
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-xl-10">
+        <div class="card rounded-3">
+          <div class="row g-0">
+            <div class="col-lg-6">
+              <div class="card-body p-md-5 mx-md-4">
+
+                <div class="text-center">
+                  <img src="{{url_for('static', filename='logo.png')}}" style="width: 150px;" alt="logo">
+                  <h4 class="mt-1 mb-5 pb-1">Simplevoice</h4>
+                </div>
+
+                <form method="POST" action="/">
+                  {{ form.csrf_token }}
+                  <p>Please login to your account</p>
+
+                  <div class="form-outline mb-4">
+                    <fieldset class="companyName">
+                        {{ form.loginName(class="form-control", placeholder="Company login name") }}
+                        {% if form.loginName.errors %}
+                          <ul class="errors">
+                            {% for error in form.loginName.errors %}
+                              <li>{{ error }}</li>
+                            {% endfor %}
+                          </ul>
+                        {% endif %}
+                    </fieldset>
+                  </div>
+
+                  <div class="form-outline mb-4">
+                      <fieldset class="password">
+                        {{ form.password(class="form-control", placeholder="Password") }}
+                         {% if form.password.errors %}
+                            <ul class="errors">
+                                {% for error in form.password.errors %}
+                                    <li>{{ error }}</li>
+                                {% endfor %}
+                            </ul>
+                          {% endif %}
+                    </fieldset>
+                  </div>
+                    <div class="form-group">
+                        {{ form.submit(class="btn btn-primary") }}
+                    </div>
+
+                </form>
+                <div class="login-signup">
+                    <span>Don't have an account?</span>
+                    <a href="{{ url_for('signup') }}" class="font-weight-bold">Create account.</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
+              <div class="px-3 py-4 p-md-5 mx-md-4">
+                <h4 class="mb-4">Simplevoice - For demo only</h4>
+                <p class="small mb-0">Simplevoice is a invoice management program. It's a CRUD
+                app where you can manage customers, invoices and items. It focuses more on
+                functionality than presentation. It serves only has a demo, so the database will
+                be reseted periodically</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    {% endfor %}
-    <form method="POST" action="/">
-      {{ form.csrf_token }}
-
-      <fieldset class="companyName">
-        {{ form.loginName.label }}
-        {{ form.loginName(placeholder='Login name of your company') }}
-        {% if form.loginName.errors %}
-          <ul class="errors">
-            {% for error in form.loginName.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-      </fieldset>
-      <fieldset class="password">
-          {{ form.password.name }}
-          {{ form.password(placeholder='Password') }}
-          {% if form.password.errors %}
-            <ul class="errors">
-                {% for error in form.password.errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-          {% endif %}
-      </fieldset>
-
-
-      <div class="submit-button">
-        {{ form.submit }}
-      </div>
-
-      <div class="login-signup">
-        <span>Don't have an account?</span>
-        <a href="{{ url_for('signup') }}">Create accont.</a>
-      </div>
-
-    </form>
+    </div>
+  </div>
+</section>
 {% endblock %}
 </body>
 </html>
