--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,92 +5,94 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/styles/base.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
 
-    {% block content %}
-  <div class="form-wrapper">
+{% block content %}
+<section>
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-xl-5">
+        <div class="card rounded-3">
+          <div class="row g-0">
+            <div class="col-lg-12">
+              <div class="card-body p-md-5 mx-md-4">
 
-    {% for message in get_flashed_messages() %}
-      <div class="alert alert-warning">
-        <button
-          type="button"
-          class="close"
-          data-dismiss="alert">
-          x
-        </button>
-        {{ message }}
-      </div>
-    {% endfor %}
+                <div class="text-center">
+                  <img src="{{url_for('static', filename='logo.png')}}" style="width: 150px;" alt="logo">
+                  <h4 class="mt-1 mb-5 pb-1">Simplevoice</h4>
+                </div>
 
-    <h1>Sign Up</h1>
+                <form method="POST" action="/signup">
+                  {{ form.csrf_token }}
+                  <p>Please login to your account</p>
 
-    <form method="POST" action="/signup">
-      {{ form.csrf_token }}
+                  <div class="form-outline mb-4">
+                     <fieldset class="companyName">
+                      {{ form.companyName(class="form-control", placeholder="Name of your company") }}
+                      {% if form.companyName.errors %}
+                        <ul class="errors">
+                          {% for error in form.companyName.errors %}
+                            <li>{{ error }}</li>
+                          {% endfor %}
+                        </ul>
+                      {% endif %}
+                    </fieldset>
+                  </div>
 
-      <fieldset class="companyName">
-        {{ form.companyName.label }}
-        {{ form.companyName(placeholder='Name of you company') }}
-        {% if form.companyName.errors %}
-          <ul class="errors">
-            {% for error in form.companyName.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-      </fieldset>
+                  <div class="form-outline mb-4">
+                      <fieldset class="loginName">
+                        {{ form.loginName(class="form-control", placeholder="Login name") }}
+                        {% if form.loginName.errors %}
+                          <ul class="errors">
+                            {% for error in form.loginName.errors %}
+                              <li>{{ error }}</li>
+                            {% endfor %}
+                          </ul>
+                        {% endif %}
+                      </fieldset>
+                  </div>
+                  <div class="form-outline mb-4">
+                      <fieldset class="password">
+                        {{ form.password(class="form-control", placeholder="Password") }}
+                        {% if form.password.errors %}
+                          <ul class="errors">
+                            {% for error in form.password.errors %}
+                              <li>{{ error }}</li>
+                            {% endfor %}
+                          </ul>
+                        {% endif %}
+                      </fieldset>
+                  </div>
+                  <div class="form-outline mb-4">
+                      <fieldset class="confirm">
+                        {{ form.confirm(class="form-control", placeholder="Confirm password") }}
+                        {% if form.confirm.errors %}
+                          <ul class="errors">
+                            {% for error in form.confirm.errors %}
+                              <li>{{ error }}</li>
+                            {% endfor %}
+                          </ul>
+                        {% endif %}
+                      </fieldset>
+                  </div>
+                    <div class="form-group">
+                        {{ form.submit(class="btn btn-primary") }}
+                    </div>
 
-      <fieldset class="loginName">
-        {{ form.loginName.label }}
-        {{ form.loginName(placeholder='Used for loging in') }}
-        {% if form.loginName.errors %}
-          <ul class="errors">
-            {% for error in form.loginName.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-      </fieldset>
-
-      <fieldset class="password">
-        {{ form.password.label }}
-        {{ form.password }}
-        {% if form.password.errors %}
-          <ul class="errors">
-            {% for error in form.password.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-      </fieldset>
-
-      <fieldset class="confirm">
-        {{ form.confirm.label }}
-        {{ form.confirm }}
-        {% if form.confirm.errors %}
-          <ul class="errors">
-            {% for error in form.confirm.errors %}
-              <li>{{ error }}</li>
-            {% endfor %}
-          </ul>
-        {% endif %}
-      </fieldset>
-
-      <div class="submit-button">
-        {{ form.submit }}
-      </div>
-
-    </form>
-
-    <div class="login-signup">
-      <div>
-        <span>Already have an account?</span>
-        <a href="{{ url_for('login') }}">Log in.</a>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-
+</section>
 {% endblock %}
 </body>
 </html>
